fix windows *.bat files
git-svn-id: svn://softwarelivre.sapo.pt/broker/trunk@955 b5e76149-5b1e-0410-8289-f826a2598d57